update user model, controller, test (#24)
